<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lnParentRole"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0DE57"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/lblWelcome"
            android:textColor="#3b3b43"
            android:textSize="@dimen/_18ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvYouAre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/lblSelectRole"
            android:textColor="#383A3C"
            android:textSize="@dimen/_16sdp" />

        <RelativeLayout
            android:id="@+id/rltAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_alert_yes"
            android:onClick="onClickEvent"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/rubik_medium"
                android:includeFontPadding="false"
                android:text="@string/lblAdmin"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_right" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/lblOr"
            android:textColor="#383A3C"
            android:textSize="@dimen/_14sdp" />

        <RelativeLayout
            android:id="@+id/rltStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_alert_yes"
            android:onClick="onClickEvent"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/rubik_medium"
                android:includeFontPadding="false"
                android:text="@string/lblStudent"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_15sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivStudentNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_right" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>