<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/bg_disclaimer"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDisclaimerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_10sdp"
            android:text="@string/lblDisclaimer"
            android:textColor="#383A3C"
            android:textSize="@dimen/_16ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e2e6ec" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDisclaimerMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:includeFontPadding="false"
                android:text="@string/msgDisclaimer"
                android:textColor="#383A3C"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_alert_yes"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="@dimen/_10sdp"
                android:text="@string/lblOk"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>