<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rltParentCouponCode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="@dimen/_15sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_disclaimer"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAdminPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_10sdp"
            android:text="@string/lblAdminPassword"
            android:textColor="#383A3C"
            android:textSize="@dimen/_14ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e2e6ec" />

        <LinearLayout
            style="@style/editTextLinearLayoutStyle"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/evPassword"
                style="@style/editTextStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/lblEnterPassword"
                android:inputType="textPassword"
                android:maxLength="11" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPasswordVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_password_visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_alert_no"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/lblCancel"
                android:textColor="#697281"
                android:textSize="@dimen/_13ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_alert_yes"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:text="@string/lblLogin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>